Display notifications in bottom-right of window (also some whitespace cleanup).  Fixes #25.

--- a/client/css/main.less
+++ b/client/css/main.less
@@ -225,6 +225,11 @@ pre.inline {
 /*************************************************
               Other Overrides
 ************************************************/
+
+.ui-pnotify.stack-bottomright {
+  right: auto;
+  top: auto;
+}
 .ui-pnotify-history-container {
   /* Hide the Pines Notify history menu */
   display: none;
